--- a/.gitignore
+++ b/.gitignore
@@ -9,7 +9,6 @@
 /[Bb]uilds/
 /[Ll]ogs/
 /[Mm]emoryCaptures/
-.idea/.idea.ShootingRange
 
 # Never ignore Asset meta data
 !/[Aa]ssets/**/*.meta
@@ -22,7 +21,7 @@
 
 # Visual Studio cache directory
 .vs/
-
+.idea/
 # Gradle cache directory
 .gradle/
 
